tests/parsing/smtlib/v2.6/errors/148_function_dec_bad_name_1.expected
File "tests/parsing/smtlib/v2.6/errors/148_function_dec_bad_name_1.smt2", line 2, character 19-20:
2 | (define-funs-rec ((_)))
                       ^
Error while parsing a function declaration, read the reserved word '_',
      but expected a symbol for the function name.
